# SHARE

./: .docker-compose.elastic8.env  .docker-compose.env  .dockerignore  .gitignore  .travis.yml  ARCHITECTURE.md  CHANGELOG  CHANGELOG.md  CNAME  CONTRIBUTING.md  Dockerfile  QUICKSTART.md  README-docker-quickstart.md  README.md  TODO.md  USING-THE-API.md  Vagrantfile  WHAT-IS-THIS-EVEN.md  _TODO.txt  _TODO_denorm.txt  _TODO_multindex.txt  _quest  _quest.md  dev-requirements.txt  docker-compose.yml  favicon_finder.sh  infer_schema.py  manage.py  models.dot  mypy.ini  pip-selfcheck.json  pyproject.toml  pytest.ini  pyvenv.cfg  relation-types.json  requirements.txt  setup.cfg  setup.py  synonyms.json  synonyms.shelf  (+2 more)
api/: authentication.py  base.py  deprecation.py  fields.py  filters.py  middleware.py  pagination.py  parsers.py  permissions.py  renderers.py  schemas.py  serializers.py  urls.py  urls_v1.py  util.py  v1_schemas.py  views.py
core/: models.py
db/: deletion.py
docs/: Makefile  conf.py  elasticsearch.rst  ember_app.rst  harvesters_and_normalizers.rst  harvesters_and_transformers.rst  index.rst  make.bat  quickstart.rst  requirements.txt  share_api.rst  share_models.rst  troubleshooting.rst
examples/: README.md
how-to/: add-a-source.rst  run-locally.md  use-the-api.md
monitor/: models.py
org_arxiv_api/: models.py  tasks.py  views.py
osf_oauth2_adapter/: adapters.py  apps.py  provider.py  urls.py  views.py
project/: __init__.py  celery.py  log.py  logging_formatter.py  settings.py  static.py  tasks.py  urls.py  utils.py  wsgi.py  wsgi_green.py
providers/: Columbia.md  CrossRef.md  DOEnergy.md  DataONE.md  MIT.md  PLOS.md  Penn.md  README.md  SCSU.md  SIU.md  TexasState.md  UC-CDL.md  UC-DMPTool.md  UIUC-IDEALS.md  VT.md  WayneState.md  arXiv.md  edu.asu.md  edu.calpoly.md  edu.cmu.md  edu.illinois.ideals.md  edu.mit.md  edu.siu.opensiuc.md  edu.stcloudstate.md  edu.trinity.md  edu.txstate.md  edu.upenn.md  edu.utexas.md  edu.valpo.md  edu.vt.vtechworks.md  edu.washington.researchworks.md  edu.wayne.md  (+10 more)
(+2991 files in other folders)
