[project]
name = "shtrove"
version = "25.1.1"  # TODO: get version from share/version.py
package-mode = false
description = ""
authors = [
    {name = "CenterForOpenScience", email = "share-support@cos.io"}
]
readme = "README.md"
requires-python = "=3.13"
dependencies = [
    "bcrypt==4.3.0",  # Apache 2.0
    "celery==5.4.0",  # BSD 3 Clause
    "colorlog==6.9.0",  # MIT
    "django-allauth==65.5.0",  # MIT
    "django-celery-beat==2.7.0",  # BSD 3 Clause
    "django-cors-headers==4.7.0",  # MIT
    "django-extensions==3.2.3",  # MIT
    "django-filter==25.1",  # BSD
    "django-oauth-toolkit==3.0.1",  # BSD
    "django==5.2",  # BSD 3 Clause
    "elasticsearch8==8.17.2",  # Apache 2.0
    "lxml==5.3.0",  # BSD
    "kombu==5.5.0",  # BSD 3 Clause
    "markdown2==2.5.3",  # MIT
    "psycopg2==2.9.10",  # LGPL with exceptions or ZPL
    "rdflib==7.1.3",  # BSD 3 Clause
    "requests==2.32.3",  # Apache 2.0
    "primitive_metadata==0.2025.1",  # MIT
    "sentry-sdk[django]==2.24.1",  # MIT

    # to be removed in future work:
    "djangorestframework==3.16.0",  # BSD
    "djangorestframework-jsonapi==7.1.0",  # BSD
    "elasticsearch5==5.5.6",  # Apache 2.0
    "PyJWE==1.0.0", # Apache 2.0
]

# "dist" dependency group relevant only in deployment:
[tool.poetry.group.dist]
optional = true
[tool.poetry.group.dist.dependencies]
uwsgi = "2.0.28"
newrelic = "10.7.0"  # newrelic APM agent, Custom License
gevent = "24.11.2"  # MIT
psycogreen = "1.0.2"  # BSD


# "dev" dependency group relevant only for local dev:
[tool.poetry.group.dev]
optional = true
[tool.poetry.group.dev.dependencies]
coveralls = "3.3.1"
django-debug-toolbar = "5.1.0"
factory-boy = "3.3.3"
faker = "37.1.0"
flake8 = "7.2.0"
pytest-benchmark = "5.1.0"
pytest = "8.3.5"
pytest-django = "4.11.1"

###
# other stuff

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
omit = ["tests/*"]
